16112
When I look . + <tab> for an Elem I get an error but possible members are shown. 

C:\scala-2.9.0.RC4\examples>scala
Welcome to Scala version 2.9.0.RC4 (Java HotSpot(TM) Client VM, Java 1.6.0_18).
Type in expressions to have them evaluated.
Type :help for more information.
```scala
scala> val someXML = <X><VALUE>1</VALUE><VALUE>2</VALUE></X>
someXML: scala.xml.Elem = <X><VALUE>1</VALUE><VALUE>2</VALUE></X>

scala> val total1 = (someXML \ "VALUE").<console>:1: error: ';' expected but ')'
 found.
"VALUE")
       ^

+                     asInstanceOf          charAt
codePointAt           codePointBefore       codePointCount
compareTo             compareToIgnoreCase   concat
contains              contentEquals         endsWith
equalsIgnoreCase      getBytes              getChars
indexOf               intern                isEmpty
isInstanceOf          lastIndexOf           length
matches               offsetByCodePoints    regionMatches
replace               replaceAll            replaceFirst
split                 startsWith            subSequence
substring             toCharArray           toLowerCase
toString              toUpperCase           trim
```

When I do this again I get no error but even more possible memebers and also threadmembers like notifyAll, synchronized, wait and som peculiars like $$asInstanceOf
```scala
scala> val total1 = (someXML \ "VALUE").
!=                    ##                    $$asInstanceOf
$$isInstanceOf         +                     ==
asInstanceOf          charAt                codePointAt
codePointBefore       codePointCount        compareTo
compareToIgnoreCase   concat                contains
contentEquals         endsWith              eq
equals                equalsIgnoreCase      getBytes
getChars              getClass              hashCode
indexOf               intern                isEmpty
isInstanceOf          lastIndexOf           length
matches               ne                    notify
notifyAll             offsetByCodePoints    regionMatches
replace               replaceAll            replaceFirst
split                 startsWith            subSequence
substring             synchronized          this
toCharArray           toLowerCase           toString
toUpperCase           trim                  wait
```
